Refactored all 4 services, added Payment & Notification Service, and implemented Kafka integration